# MSc-Dissertation

./: .directory  .gitignore  .gitmodules  README.md  student_projects.odt
Code/: .directory  .gitmodules  CMakeLists.txt
Code/KinectLibraries/KinectDepthImageOutput/: CMakeLists.txt  KinectDepthImageOutput.pro  Makefile
Code/KinectLibraries/KinectDepthImageOutput/KinectDepthImageOutputLibrary/: CMakeLists.txt  KinectDepthImageOutputLibrary.pro  Makefile  kinectdepthimageoutputlibrary.cpp  kinectdepthimageoutputlibrary.h
Code/KinectLibraries/KinectDepthImageOutput/KinectDepthImageOutputWrapper/: CMakeLists.txt  KinectDepthImageOutputWrapper  KinectDepthImageOutputWrapper.pro  Makefile  kinectdepthimageoutputwrapper.cpp  kinectdepthimageoutputwrapper.h  main.cpp
Code/KinectLibraries/KinectDepthImageOutput/KinectMotorControlWrapper/: CMakeLists.txt  KinectMotorControlWrapper.cpp  KinectMotorControlWrapper.h  main.cpp  motor_control.ui
Code/KinectLibraries/KinectDepthImageOutputLibrary/: KinectDepthImageOutputLibrary.pro  kinectdepthimageoutputlibrary.cpp  kinectdepthimageoutputlibrary.h
Code/KinectLibraries/KinectDepthImageOutputWrapper/: KinectDepthImageOutputWrapper.pro  kinectdepthimageoutputwrapper.h
Code/KinectLibraries/build-KinectDepthImageOutput-Desktop-Debug/: CMakeCache.txt  KinectDepthImageOutputWrapper  KinectMotorControlWrapper  KinectMotorControlWrapper.cbp  Makefile  cmake_install.cmake
Code/KinectLibraries/build-KinectDepthImageOutput-Desktop-Debug/KinectMotorControlWrapper_autogen/: mocs_compilation.cpp
Code/KinectLibraries/build-KinectDepthImageOutput-Desktop-Debug/KinectMotorControlWrapper_autogen/ZX72GLJPOH/: moc_KinectMotorControlWrapper.cpp
Code/KinectLibraries/build-KinectDepthImageOutput-Desktop-Debug/KinectMotorControlWrapper_autogen/include/: ui_motor_control.h
Code/KinectLibraries/build-KinectDepthImageOutput-Desktop-Default/: CMakeCache.txt  KinectDepthImageOutputWrapper.cbp  Makefile  cmake_install.cmake
Code/KinectLibraries/build-KinectDepthImageOutputLibrary-Desktop-Debug/: Makefile
Code/KinectLibraries/build-KinectDepthImageOutputLibrary-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile
Code/KinectLibraries/build-KinectDepthImageOutputWrapper-Desktop-Debug/: KinectDepthImageOutputWrapper  Makefile
Code/KinectLibraries/build-KinectDepthImageOutputWrapper-Desktop_Qt_5_7_0_GCC_64bit-Debug/: KinectDepthImageOutputWrapper  Makefile
Code/build-libfreenect-Desktop-Debug/: CMakeCache.txt  Makefile  UninstallTarget.cmake  cmake_install.cmake  libfreenect.cbp
Code/build-libfreenect-Desktop-Debug/examples/: Makefile  cmake_install.cmake
Code/build-libfreenect-Desktop-Debug/fakenect/: Makefile  cmake_install.cmake
Code/build-libfreenect-Desktop-Debug/lib/: libfreenect.so.0.6.0  libfreenect_sync.so.0.6.0
Code/build-libfreenect-Desktop-Debug/lib/fakenect/: libfakenect.so.0.6.0
Code/build-libfreenect-Desktop-Debug/src/: Makefile  cmake_install.cmake
Code/build-libfreenect-Desktop-Debug/wrappers/c_sync/: Makefile  cmake_install.cmake
Code/build-libfreenect-Desktop-Debug/wrappers/cpp/: Makefile  cmake_install.cmake
Code/build-libfreenect-Desktop-Default/: CMakeCache.txt  Makefile  UninstallTarget.cmake  cmake_install.cmake  libfreenect.cbp
Code/build-libfreenect-Desktop-Default/examples/: Makefile  cmake_install.cmake
Code/build-libfreenect-Desktop-Default/fakenect/: Makefile  cmake_install.cmake
Code/build-libfreenect-Desktop-Default/lib/: libfreenect.so.0.6.0  libfreenect_sync.so.0.6.0
Code/build-libfreenect-Desktop-Default/lib/fakenect/: libfakenect.so.0.6.0
Code/build-libfreenect-Desktop-Default/src/: Makefile  cmake_install.cmake
Code/build-libfreenect-Desktop-Default/wrappers/c_sync/: Makefile  cmake_install.cmake
Code/build-libfreenect-Desktop-Default/wrappers/cpp/: Makefile  cmake_install.cmake
Misc/: .directory  .~lock.Dissertation Metrics.ods#  Dissertation Metrics.ods  Dissertation Metrics.xlsx
Report/: Motion Signal Extraction Framework for the Microsoft Kinect Camera Point Cloud Registration and its Application as a Motion Correction Metric in PETCT.docx  Motion Signal Extraction Framework for the Microsoft Kinect Camera Point Cloud Registration and its Application as a Motion Correction Metric in PETCT.odt
Report/Final Report/: .~lock.Motion Signal Extraction Framework for the Microsoft Kinect Camera Point Cloud Registration and its Application as a Motion Correction Metric in PETCT.odt#  Motion Signal Extraction Framework for the Microsoft Kinect Camera Point Cloud Registration and its Application as a Motion Correction Metric in PETCT.docx  Motion Signal Extraction Framework for the Microsoft Kinect Camera Point Cloud Registration and its Application as a Motion Correction Metric in PETCT.odt
Report/Images/: Kinect Application Activity Diagram.xml  Kinect Application Use Case Diagram.xml  Point Cloud Application Activity Diagram.xml  Point Cloud Application Use Case Diagram.xml  nikos_head
Report/Initial Report/: .~lock.Motion Signal Extraction Framework for the Microsoft Kinect Camera Point Cloud Registration and its Application as a Motion Correction Metric in PETCT.odt#  Motion Signal Extraction Framework for the Microsoft Kinect Camera Point Cloud Registration and its Application as a Motion Correction Metric in PETCT.docx  Motion Signal Extraction Framework for the Microsoft Kinect Camera Point Cloud Registration and its Application as a Motion Correction Metric in PETCT.odt
Report/Misc/: .~lock.Final Time Plan.ods#  Final Time Plan.ods  Final Time Plan.xlsx  Initial Time Plan.ods  Journal.odp  Journal.pptx  Kinect Version Comparison.ods  Kinect Version Comparison.xlsx
Report/Misc/Test Output/Arduino Test/: Graphs.ods  Graphs.xlsx  registration_txt_1535745965605156829.txt
Report/Misc/Test Output/Curve Test/: Graphs.ods  Graphs.xlsx  registration_txt_1535986410259292766.txt
Report/Misc/Test Output/Plane Test/: Graphs.ods  Graphs.xlsx  registration_txt_1535755582771579171.txt
Report/Undergraduate Final Report/: .~lock.Capture the Campus.odt#
(+6 files in other folders)
