PROJECT(KinectDepthImageOutputWrapper VERSION 0.0 LANGUAGES CXX)

set(FREENECT_INCLUDE_DIR "default value" CACHE FILEPATH "description")
set(FREENECT_LIBRARY "default value" CACHE FILEPATH "description")

include_directories(${FREENECT_INCLUDE_DIR})

add_executable(${PROJECT_NAME} "${CMAKE_CURRENT_LIST_DIR}/main.cpp")

target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Widgets Qt5::Gui KinectDepthImageOutputLibrary ${FREENECT_LIBRARY})

 target_sources(KinectDepthImageOutputWrapper
    PRIVATE
        "${CMAKE_CURRENT_LIST_DIR}/kinectdepthimageoutputwrapper.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/kinectdepthimageoutputwrapper.h"
        )


install(TARGETS KinectDepthImageOutputWrapper DESTINATION bin)
